# wargame

./: .gitignore  AGENTS.md  CLAUDE.md  Makefile  ROADMAP.md  main.py  meta-process.yaml  play.py  pyproject.toml  run_web.py
.openclaw/: mission.yaml
chatgpt_initial_discussion/: chatgpt_convo_20260325.txt
claude_code_planning/: ADR-001-mechanical-vs-llm-split.md  ADR-002-additive-layers-not-competing-engines.md  ADR-003-dynamic-agent-population.md  ADR-004-npc-vs-helper-agents.md  PLAN.md
docs/: ONE_PAGER.md  wiki_manifest.yaml
docs/plans/: 01_implementation.md
enforced_planning/: __init__.py  agents_rendering.py  file_context.py  notebook_registry_validation.py  plan_validation.py
gemini_planning_based_on_chatgpt_discussion/: PRD.md  README.md  architecture_diagram.md  json_schemas.md  more_diagrams.md
notebooks/: NB1_causal_engine.ipynb  NB2_gm_pipeline.ipynb  NB3_full_turn.ipynb  NB4_parser.ipynb  NB5_fog_of_war.ipynb
prompts/: game_master.yaml
scenarios/: test_scenario.json  test_scenario.yaml  us_iran.yaml  us_iran_2026.yaml
scripts/: check_doc_coupling.py  check_llm_client_import.py  check_markdown_links.py  check_required_reading.py
scripts/meta/: check_agents_sync.py  check_coordination_claims.py  file_context.py  hook_log.py  render_agents_md.py  (+6 more)
src/: __init__.py
tests/: test_cli_smoke.py  test_engine.py  test_gm.py  test_gm_adjudication.py  test_observation_filter.py  test_scenario_loader.py  test_turn_engine.py
wargame/: __init__.py  __main__.py  ai_opponent.py  cli.py  engine.py  fog.py  gm.py  models.py  parser.py  scenario.py
(+14 files in other folders)
