[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "wargame"
version = "0.1.0"
description = "Generative AI Geopolitical Wargame"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
llm = ["llm_client"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24"]

[tool.setuptools.packages.find]
include = ["src*"]
